don't spit out GC details