@@ -42,6 +42,7 @@ javaOptions := {
   val openglPath = "lib/opengl/macosx"
   val jriPath = "/Library/Frameworks/R.framework/Versions/Current/Resources/library/rJava/jri"
   //Seq("-Djava.library.path=" + jriPath + ":" + openglPath)
+  //Seq("-Djava.library.path=" + jriPath, "-Xmx4G", "-verbosegc", "-XX:+PrintGCDateStamps", "-Xloggc:gcevents.log")
   Seq("-Djava.library.path=" + jriPath, "-Xmx4G")
   //val openglPath = """lib\opengl\windows64"""
   //val jriPath = """C:\Users\tom\Documents\R\win-library\2.13\rJava\jri"""
